<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dimonpom.planner.PlaningActivity"
    tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:text="@string/Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="6dp"
            android:text="@string/Body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:hint="@string/input_title"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/input_main_part"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/timeButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:onClick="setTime"
            app:layout_constraintEnd_toStartOf="@+id/dateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <Button
            android:id="@+id/dateButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:onClick="setDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/timeButton"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/DelayList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ImageDescription"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iB_green"
        app:srcCompat="@mipmap/ic_clear" />

    <com.dimonpom.planner.DrawingView
        android:id="@+id/drawingView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iB_green" />

    <ImageButton
        android:id="@+id/iB_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/ic_clear"
        android:onClick="ChangeToBlack"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:srcCompat="@mipmap/ic_blackbox" />

    <ImageButton
        android:id="@+id/iB_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/ic_clear"
        android:onClick="ChangeToBlue"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/iB_black"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:srcCompat="@mipmap/ic_bluebox" />

    <ImageButton
        android:id="@+id/iB_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/ic_clear"
        android:onClick="ChangeToRed"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/iB_blue"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:srcCompat="@mipmap/ic_redbox" />

    <ImageButton
        android:id="@+id/iB_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/ic_clear"
        android:onClick="ChangeToGreen"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/iB_red"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:srcCompat="@mipmap/ic_greenbox" />

    <ImageButton
        android:id="@+id/iB_erase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/ic_clear"
        android:longClickable="true"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:srcCompat="@mipmap/ic_eraser" />

    </android.support.constraint.ConstraintLayout>